<resources>
    <!-- General Strings -->
    <string name="app_logo_desc">ElectroBus</string>
    <string name="app_name">ElectroBus</string>
    <!-- Scene-Specific Strings -->
    <!-- • Login Scene -->
    <string name="btnLogin1_eng">START</string>
    <string name="btnLogin1_esp">INICIAR</string>
    <string name="btnSignUp_eng">Sign Up</string>
    <string name="btnSignUp_esp">Registrarse</string>
    <string name="etxLoginHint1">TOTP</string>
    <string name="etxLoginHint1_desc_eng">Insert TOTP key here.</string>
    <string name="etxLoginHint1_desc_esp">Introduzca la clave TOTP aquí.</string>
    <string name="txvLogin1_eng">Forgot Password?</string>
    <string name="txvLogin1_esp">¿Olvidó su contraseña?</string>
    <!-- • Sign Up Scene -->
    <string name="btnConductor_eng">Driver</string>
    <string name="btnConductor_esp">Conductor</string>
    <string name="btnPasajero_eng">Passenger</string>
    <string name="btnPasajero_esp">Pasajero</string>
    <string name="btnSendSignUp_eng">SIGN UP</string>
    <string name="btnSendSignUp_esp">REGISTRARSE</string>
    <string name="etxEmailHint">Email</string>
    <string name="etxMatriculaHint_eng">Institution ID</string>
    <string name="etxMatriculaHint_esp">Matrícula o Nómina</string>
    <string name="etxNombreHint_eng">Name</string>
    <string name="etxNombreHint_esp">Nombre</string>
    <string name="etxPasswordHint_eng">Password</string>
    <string name="etxPasswordHint_esp">Contraseña</string>
    <string name="txvSignUp1_eng">I\'m:</string>
    <string name="txvSignUp1_esp">Soy:</string>
    <!-- • Home Fragment Scene -->
    <!-- • Routes Fragment Scene -->
    <!-- • Stats Fragment Scene -->
    <!-- • Alarms Fragment Scene -->
    <!-- • Settings Fragment Scene -->
    <string name="txvSettings1_eng">General Settings</string>
    <string name="txvSettings1_esp">Configuración General</string>
    <string name="txvSettings2_eng">Alarms</string>
    <string name="txvSettings2_esp">Alarmas</string>
    <string name="txvSettings1_1_eng">Modo Oscuro</string>
    <string name="txvSettings1_1_esp">Dark Mode</string>
    <string name="txvSettings1_2_eng">Language</string>
    <string name="txvSettings1_2_esp">Idioma</string>
    <string name="txvSettings1_3_eng">Main Route</string>
    <string name="txvSettings1_3_esp">Ruta Principal</string>
    <string name="txvSettings2_1_eng">Set alarm:</string>
    <string name="txvSettings2_1_esp">Mandar la alarma:</string>
    <string name="txvSettings2_2_eng">Toggle sound</string>
    <string name="txvSettings2_2_esp">Alarma con sonido</string>
    <string-array name="lvwAlarmTimesList_eng">
        <item>10 min before</item>
        <item>15 min before</item>
        <item>20 min before</item>
        <item>30 min before</item>
    </string-array>
    <string-array name="lvwAlarmTimesList_esp">
        <item>10 min antes</item>
        <item>15 min antes</item>
        <item>20 min antes</item>
        <item>30 min antes</item>
    </string-array>
    <string-array name="lvwLanguageList">
        <item>English</item>
        <item>Español</item>
    </string-array>
    <string-array name="lvwRoutesList">
        <item>Garza Sada</item>
        <item>Hospitales y Escuelas</item>
        <item>Revolución</item>
        <item>Valle Alto</item>
    </string-array>
    <!-- Temporaries
           - Borrar cuando queden hechos  -MX -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="temporaryAlarms">Alarms Fragment View</string>
    <string name="temporaryHome">Home Fragment View</string>
    <string name="temporaryRoutes">Routes Fragment View</string>
    <string name="temporaryStats">Stats Fragment View</string>
</resources>