<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:id="@+id/LinearLayoutSGU1"
        android:layout_width="360dp"
        android:layout_height="220dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgElectroBusLogo"
            android:layout_width="214dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="40dp"
            android:contentDescription="@string/app_logo_desc"
            app:srcCompat="@drawable/electrobus_logo_long" />

        <TextView
            android:id="@+id/txvSignUp1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/txvSignUp1_esp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/rgpUserType"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/btnPasajero"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/btnPasajero_esp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/btnConductor"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnConductor_esp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutSGU2"
        android:layout_width="360dp"
        android:layout_height="370dp"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayoutSGU1">

        <EditText
            android:id="@+id/etxNombre"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/etxNombreHint_esp"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etxMatricula"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/etxMatriculaHint_esp"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etxEmail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/etxEmailHint"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etxPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/etxPasswordHint_esp"
            android:inputType="textPassword"
            android:textColorHint="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/registerSendButton"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            android:backgroundTint="@color/white"
            android:text="@string/btnSendSignUp_esp"
            android:textColor="@color/blue"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>