<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_ElectroBusLogo"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:contentDescription="@string/app_logo_desc"
        app:layout_constraintBottom_toTopOf="@id/etx_LoginTOTP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/electrobus_logo_long" />

    <EditText
        android:id="@+id/etx_LoginTOTP"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/etxLoginHint1"
        android:importantForAutofill="no"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_Login"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/white"
        android:text="@string/btnLogin1_esp"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etx_LoginTOTP" />

</androidx.constraintlayout.widget.ConstraintLayout>