<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".SettingsFragment">

    <TextView
        android:id="@+id/txvSettings1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:text="@string/txvSettings1_esp"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txvSettings1_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.7"
            android:text="@string/txvSettings1_1_esp"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:checked="false"
            android:layout_weight="0.3"
            android:trackTint="@color/rich_black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txvSettings1_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:text="@string/txvSettings1_2_esp"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <!-- Pendiente de configurar en activity  -MX -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5" >

            <AutoCompleteTextView
                android:id="@+id/atvSettings1_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Settings1_2"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txvSettings1_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:text="@string/txvSettings1_3_esp"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <!-- Pendiente de configurar en activity  -MX -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5" >

            <AutoCompleteTextView
                android:id="@+id/atvSettings1_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Settings1_3"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/txvSettings2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/txvSettings2_esp"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txvSettings2_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:text="@string/txvSettings2_1_esp"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <!-- Pendiente de configurar en activity  -MX -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5" >

            <AutoCompleteTextView
                android:id="@+id/atvSettings2_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Settings2_1"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txvSettings2_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.7"
            android:text="@string/txvSettings2_2_esp"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:checked="true"
            android:layout_weight="0.3"
            android:buttonTintMode="@color/white" />
    </LinearLayout>

</LinearLayout>